# udpfwd

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build.yml  linux.yml  windows.yml
src/: .clang-format  main.c  udpfwd.c  udpfwd.h  worker.c
